--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.51.0",
+    "@clerk/clerk-react": "5.0.0",
     "axios": "^1.12.2",
-    "node": "^25.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
