your commit message here

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ CLOUDINARY_SECRET_KEY = PmZFPf73-QH4eQq4ks6hmFYC6eY
 CLOUDINARY_NAME = dapsjezbe
 PORT = 4000
 NODE_ENV = production
-FRONTEND_URL = https://foreverecommerce-2-gae4.vercel.app,https://foreverecommerce-2.vercel.app
+FRONTEND_URL = https://bens-repo-kmcf.vercel.app,https://bens-repo-admin.vercel.app
 CLERK_JWKS_URL = https://star-sturgeon-77.clerk.accounts.dev/.well-known/jwks.json
 CLERK_ISSUER_URL = https://star-sturgeon-77.clerk.accounts.dev
 CLERK_SECRET_KEY = sk_test_Tg1VNgl8cteOHWScGFi3h4le3ZbQ4CVPlhnjzllMMt
