--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.546.0",
+    "meilisearch": "^0.54.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
