--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Forever Ecommerce Backend API",
   "license": "ISC",
   "author": "",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@clerk/backend": "^2.18.0",
@@ -19,12 +20,14 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "meilisearch": "^0.54.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
-    "node": "^25.1.0",
     "nodemon": "^3.1.10",
     "stripe": "^19.1.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "ws": "^8.14.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
